# fastapi-ccli

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py  cloner_en.py  cloner_zh.py
app/CN/: cloner_zh.py  cloner_zh_ic.py
app/EN/: cloner_en.py  cloner_en_ic.py
app/utils/: __init__.py  get_country.py  get_ip.py  get_path.py  get_src.py
fastapi_ccli/: __init__.py  main.py
fastapi_ccli/CN/: cloner_zh.py  cloner_zh_form.py
fastapi_ccli/EN/: cloner_en.py  cloner_en_form.py
fastapi_ccli/cloner/: __init__.py  cloner_en.py  cloner_en_form.py  version.py
fastapi_ccli/cloner/en/: cloner_en.py  cloner_en_form.py
fastapi_ccli/cloner/zh/: cloner_zh.py  cloner_zh_form.py
fastapi_ccli/utils/: get_country.py  get_ip.py  get_path.py  get_src.py
test/: test_main.py
tests/: test_cloner_en.py  test_cloner_en_form.py  test_main.py
