[tool.poetry]
name = "fastapi_ccli"
version = "0.0.1"
description = "Tool to automatically clone existing fastapi repositories based on command line conditions"
authors = ["wu <jianhengwu0407@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/wu-clan/fastapi_ccli"
repository = "https://github.com/wu-clan/fastapi_ccli"

[tool.poetry.dependencies]
python = '^3.6'
typer = { version = "0.4.1", extras = ["all"] }
requests = "2.25.1"
questionary = "1.10.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[tool.poetry.scripts]
fastapi_ccli = "fastapi_ccli.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
