[project]
name = "fastapi_ccli"
version = "0.0.1"
description = "Tool to automatically clone existing fastapi repositories based on command line conditions"
authors = [
    { name = "Wu Clan", email = "jianhengwu0407@gmail.com" },
]
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.7,<4.0"
dependencies = [
    "typer[all]==0.9.0",
    "requests==2.25.1",
    "questionary==1.10.0",
    "pre-commit>=3.4.0",
]

[project.urls]
homepage = "https://github.com/wu-clan/fastapi_ccli"
repository = "https://github.com/wu-clan/fastapi_ccli"

[tool.pdm.dev-dependencies]
dev = [
    "pytest<8.0,>=7.0",
    "keyboard>=0.13.5",
]

[tool.pdm.build]
includes = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project.scripts]
fastapi-ccli = "fastapi_ccli.main:main"
